# Syntx-A1

./: .gitmodules  README.md
app/: pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/lib/: main.dart
app/lib/screens/: chat.dart  demo.dart  splash_screen.dart
application/: pubspec.yaml
whisper/: CMakeLists.txt  cmake-command.txt
whisper/include/lib/: wav_reader.h
whisper/src/: main.cpp
whisper/src/lib/: wav_reader.cpp
